@@ -63,9 +63,13 @@ class Function(Field):
 
     def convert_domain(self, domain, tables, Model):
         name, operator, value = domain[:3]
-        if not self.searcher:
-            Model.raise_user_error('search_function_missing', name)
-        return getattr(Model, self.searcher)(name, domain)
+        assert name == self.name
+        method = getattr(Model, 'domain_%s' % name, None)
+        if method:
+            return method(domain, tables)
+        if self.searcher:
+            return getattr(Model, self.searcher)(name, domain)
+        Model.raise_user_error('search_function_missing', name)
 
     def get(self, ids, Model, name, values=None):
         '''
